--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #This package is for state management
+  get: ^4.6.5
+  get_storage: ^2.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
