--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   #This package is for state management
   get: ^4.6.5
   get_storage: ^2.0.3
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
