--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   get_storage: ^2.0.3
   carousel_slider: ^4.1.1
 
+  #firebase dependencies
+  firebase_core: ^2.4.1
+  firebase_analytics: ^10.1.0
+  firebase_crashlytics: ^3.0.11
+  firebase_performance: ^0.9.0+10
+  firebase_messaging: ^14.2.1
+  flutter_local_notifications:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
