--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_performance: ^0.9.0+10
   firebase_messaging: ^14.2.1
   flutter_local_notifications:
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
