--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -45,9 +45,10 @@ dependencies:
   firebase_analytics: ^10.1.0
   firebase_crashlytics: ^3.0.11
   firebase_performance: ^0.9.0+10
-  firebase_messaging: ^14.2.1
+  firebase_messaging: 
   flutter_local_notifications:
   logger: ^1.3.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
