--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications:
   logger: ^1.3.0
   cached_network_image: ^3.2.3
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
