--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   logger: ^1.3.0
   cached_network_image: ^3.2.3
   mocktail: ^0.3.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
