--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -46,11 +46,12 @@ dependencies:
   firebase_crashlytics: ^3.0.11
   firebase_performance: ^0.9.0+10
   firebase_messaging: 
-  flutter_local_notifications:
-  logger: ^1.3.0
+  logger: ^2.1.0
   cached_network_image: ^3.2.3
-  mocktail: ^0.3.0
+  mocktail: ^1.0.3
   flutter_bloc: ^8.1.3
+  flutter_launcher_icons: ^0.13.1
+  # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^3.0.1
   integration_test:
     sdk: flutter
 
