--- a/groceries/android/app/build.gradle
+++ b/groceries/android/app/build.gradle
@@ -54,15 +54,13 @@ android {
         versionName flutterVersionName
     }
 
-   buildTypes {
-    debug {
-        minifyEnabled true
-
-        // TODO: Add your own signing config for the release build.
-        // Signing with the debug keys for now, so `flutter run --release` works.
-        signingConfig signingConfigs.debug
+ buildTypes {
+        release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
     }
-}
 }
 
 flutter {
@@ -74,4 +72,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.huawei.agconnect:agconnect-core:1.5.2.300'
 }
+apply plugin: 'com.huawei.agconnect'
