--- a/groceries/android/build.gradle
+++ b/groceries/android/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://developer.huawei.com/repo/' }
     }
 
     dependencies {
@@ -11,6 +12,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         classpath 'com.google.gms:google-services:4.3.13'
         classpath 'com.google.firebase:perf-plugin:1.4.1'
+        classpath 'com.huawei.agconnect:agcp:1.5.2.300'
     }
 }
 
@@ -18,6 +20,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {url 'https://developer.huawei.com/repo/'}
     }
 }
 
