--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -51,6 +51,14 @@ dependencies:
   mocktail: ^1.0.3
   flutter_bloc: ^8.1.3
   flutter_launcher_icons: ^0.13.1
+  agconnect_remote_config: ^1.9.0+300
+  agconnect_crash: ^1.9.0+300
+  agconnect_auth: ^1.9.0+310
+  agconnect_applinking: ^1.9.0+300
+  agconnect_appmessaging: ^1.9.0+300
+  agconnect_cloudfunctions: ^1.9.0+300
+  agconnect_cloudstorage: ^1.9.0+300
+  huawei_push: ^6.12.0+300
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
