--- a/groceries/android/app/build.gradle
+++ b/groceries/android/app/build.gradle
@@ -54,6 +54,15 @@ android {
         versionName flutterVersionName
     }
 
+//     signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
+
  buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -73,5 +82,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.huawei.agconnect:agconnect-core:1.5.2.300'
+    implementation 'com.huawei.hms:push:4.0.3.301'
 }
 apply plugin: 'com.huawei.agconnect'
