updated project to use riverpod as statemanagement

--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   agconnect_cloudstorage: ^1.9.0+300
   huawei_push: ^6.12.0+300
   cloud_firestore: ^4.15.10
+  riverpod: ^2.5.1
+  flutter_riverpod: ^2.5.1
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
