firing notifications based on device model

--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   cloud_firestore: ^4.15.10
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  device_info_plus: ^10.0.1
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
