--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
   device_info_plus: ^10.0.1
+  camera: ^0.10.5+9
+  google_mlkit_text_recognition: ^0.11.0
+  permission_handler: ^11.3.1
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
