--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -66,6 +66,12 @@ dependencies:
   camera: ^0.10.5+9
   google_mlkit_text_recognition: ^0.11.0
   permission_handler: ^11.3.1
+  string_similarity: ^2.0.0
+  image_picker: ^1.0.7
+  flutter_document_scanner: ^1.1.0
+  dio: ^5.4.2+1
+  pretty_dio_logger: ^1.3.1
+  flutter_dotenv: ^5.1.0
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
