--- a/groceries/pubspec.yaml
+++ b/groceries/pubspec.yaml
@@ -71,6 +71,10 @@ dependencies:
   dio: ^5.4.2+1
   pretty_dio_logger: ^1.3.1
   flutter_dotenv: ^5.1.0
+  ussd_advanced: ^1.1.0
+  ussd_service: ^0.1.1
+  telephony: ^0.2.0
+  autoussdflutter: ^4.4.0
   # flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
